{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 27,
  "lineage": "85083f57-241d-4c89-a116-ec74f1a4b945",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f3f1024246b4b414",
            "arn": "arn:aws:ec2:us-east-1:843302972746:elastic-ip/eipalloc-0f3f1024246b4b414",
            "association_id": "eipassoc-0a050ee0e09d70e91",
            "domain": "vpc",
            "id": "eipalloc-0f3f1024246b4b414",
            "instance": "i-081b48f96c423b140",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0fcafa367b8adbc59",
            "private_dns": "ip-10-0-1-230.ec2.internal",
            "private_ip": "10.0.1.230",
            "public_dns": "ec2-18-206-6-115.compute-1.amazonaws.com",
            "public_ip": "18.206.6.115",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CreatedBy": "Terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "Compute",
              "Name": "dev-task6-web-server-eip",
              "Project": "Task6-ModulesAndPacker",
              "Task": "Task6"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "Compute",
              "Name": "dev-task6-web-server-eip",
              "Project": "Task6-ModulesAndPacker",
              "Task": "Task6"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.ubuntu",
            "module.compute.aws_instance.main",
            "module.security.aws_security_group.database",
            "module.security.aws_security_group.web",
            "module.security.aws_security_group_rule.db_egress",
            "module.security.aws_security_group_rule.db_from_web",
            "module.security.aws_security_group_rule.db_postgres_from_web",
            "module.security.aws_security_group_rule.web_egress",
            "module.security.aws_security_group_rule.web_http",
            "module.security.aws_security_group_rule.web_https",
            "module.security.aws_security_group_rule.web_ssh",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e33b589d91ea2b8",
            "arn": "arn:aws:ec2:us-east-1:843302972746:instance/i-081b48f96c423b140",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-081b48f96c423b140",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fcafa367b8adbc59",
            "private_dns": "ip-10-0-1-230.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.230",
            "public_dns": "ec2-18-206-6-115.compute-1.amazonaws.com",
            "public_ip": "18.206.6.115",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:843302972746:key/e25bd29b-74a9-433b-96f2-ce317456c0e6",
                "throughput": 125,
                "volume_id": "vol-00461a06536c49f86",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-011d209a2eb7b8ff0",
            "tags": {
              "CreatedBy": "Terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "Compute",
              "Name": "dev-task6-web-server",
              "Project": "Task6-ModulesAndPacker",
              "Task": "Task6"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "Compute",
              "Name": "dev-task6-web-server",
              "Project": "Task6-ModulesAndPacker",
              "Task": "Task6"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-029761f43cc6590ee"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.ubuntu",
            "module.security.aws_security_group.database",
            "module.security.aws_security_group.web",
            "module.security.aws_security_group_rule.db_egress",
            "module.security.aws_security_group_rule.db_from_web",
            "module.security.aws_security_group_rule.db_postgres_from_web",
            "module.security.aws_security_group_rule.web_egress",
            "module.security.aws_security_group_rule.web_http",
            "module.security.aws_security_group_rule.web_https",
            "module.security.aws_security_group_rule.web_ssh",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843302972746:security-group/sg-0119f34497dcfab29",
            "description": "Security group for databases",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0119f34497dcfab29",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from web servers",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-029761f43cc6590ee"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from web servers",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-029761f43cc6590ee"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "dev-db-sg-20260413224213693700000004",
            "name_prefix": "dev-db-sg-",
            "owner_id": "843302972746",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "Terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "Security",
              "Name": "dev-db-sg",
              "Project": "Task6-ModulesAndPacker",
              "Task": "Task6"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "Security",
              "Name": "dev-db-sg",
              "Project": "Task6-ModulesAndPacker",
              "Task": "Task6"
            },
            "timeouts": null,
            "vpc_id": "vpc-0136ab482244d7d75"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843302972746:security-group/sg-029761f43cc6590ee",
            "description": "Security group for web servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-029761f43cc6590ee",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-web-sg-20260413224213693700000005",
            "name_prefix": "dev-web-sg-",
            "owner_id": "843302972746",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "Terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "Security",
              "Name": "dev-web-sg",
              "Project": "Task6-ModulesAndPacker",
              "Task": "Task6"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "Security",
              "Name": "dev-web-sg",
              "Project": "Task6-ModulesAndPacker",
              "Task": "Task6"
            },
            "timeouts": null,
            "vpc_id": "vpc-0136ab482244d7d75"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "db_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All outbound traffic",
            "from_port": 0,
            "id": "sgrule-417324719",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0119f34497dcfab29",
            "security_group_rule_id": "sgr-0a128f200cb6efb8d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.database",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "db_from_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "MySQL from web servers",
            "from_port": 3306,
            "id": "sgrule-18242702",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0119f34497dcfab29",
            "security_group_rule_id": "sgr-0081131a506ef2108",
            "self": false,
            "source_security_group_id": "sg-029761f43cc6590ee",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.database",
            "module.security.aws_security_group.web",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "db_postgres_from_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "PostgreSQL from web servers",
            "from_port": 5432,
            "id": "sgrule-3578096507",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0119f34497dcfab29",
            "security_group_rule_id": "sgr-01f3c0850fb303d9b",
            "self": false,
            "source_security_group_id": "sg-029761f43cc6590ee",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.database",
            "module.security.aws_security_group.web",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All outbound traffic",
            "from_port": 0,
            "id": "sgrule-2373315411",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-029761f43cc6590ee",
            "security_group_rule_id": "sgr-05eb64453ea38de7b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.web",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP from anywhere",
            "from_port": 80,
            "id": "sgrule-861186722",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-029761f43cc6590ee",
            "security_group_rule_id": "sgr-05c02dc77e9180c1f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.web",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS from anywhere",
            "from_port": 443,
            "id": "sgrule-202491195",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-029761f43cc6590ee",
            "security_group_rule_id": "sgr-050295d34ff41daca",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.web",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH access",
            "from_port": 22,
            "id": "sgrule-2245981975",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-029761f43cc6590ee",
            "security_group_rule_id": "sgr-08f4220b1f933ac70",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.web",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0851d96bb102ee3e2",
            "arn": "arn:aws:ec2:us-east-1:843302972746:elastic-ip/eipalloc-0851d96bb102ee3e2",
            "association_id": "eipassoc-06acb450f70190774",
            "domain": "vpc",
            "id": "eipalloc-0851d96bb102ee3e2",
            "network_border_group": "us-east-1",
            "network_interface": "eni-00a8b1c4cffbbda87",
            "private_dns": "ip-10-0-1-151.ec2.internal",
            "private_ip": "10.0.1.151",
            "public_dns": "ec2-52-22-91-227.compute-1.amazonaws.com",
            "public_ip": "52.22.91.227",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CreatedBy": "Terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "VPC",
              "Name": "dev-nat-eip",
              "Project": "Task6-ModulesAndPacker",
              "Task": "Task6"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "VPC",
              "Name": "dev-nat-eip",
              "Project": "Task6-ModulesAndPacker",
              "Task": "Task6"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843302972746:internet-gateway/igw-06bddc9ae4ad1c7bc",
            "id": "igw-06bddc9ae4ad1c7bc",
            "owner_id": "843302972746",
            "tags": {
              "CreatedBy": "Terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "VPC",
              "Name": "dev-igw",
              "Project": "Task6-ModulesAndPacker",
              "Task": "Task6"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "VPC",
              "Name": "dev-igw",
              "Project": "Task6-ModulesAndPacker",
              "Task": "Task6"
            },
            "vpc_id": "vpc-0136ab482244d7d75"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0851d96bb102ee3e2",
            "association_id": "eipassoc-06acb450f70190774",
            "connectivity_type": "public",
            "id": "nat-059582fdd0f455926",
            "network_interface_id": "eni-00a8b1c4cffbbda87",
            "private_ip": "10.0.1.151",
            "public_ip": "52.22.91.227",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-011d209a2eb7b8ff0",
            "tags": {
              "CreatedBy": "Terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "VPC",
              "Name": "dev-nat-gateway",
              "Project": "Task6-ModulesAndPacker",
              "Task": "Task6"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "VPC",
              "Name": "dev-nat-gateway",
              "Project": "Task6-ModulesAndPacker",
              "Task": "Task6"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843302972746:route-table/rtb-0ce181536689caa2d",
            "id": "rtb-0ce181536689caa2d",
            "owner_id": "843302972746",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-059582fdd0f455926",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CreatedBy": "Terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "VPC",
              "Name": "dev-private-rt",
              "Project": "Task6-ModulesAndPacker",
              "Task": "Task6"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "VPC",
              "Name": "dev-private-rt",
              "Project": "Task6-ModulesAndPacker",
              "Task": "Task6"
            },
            "timeouts": null,
            "vpc_id": "vpc-0136ab482244d7d75"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843302972746:route-table/rtb-017005cf353177522",
            "id": "rtb-017005cf353177522",
            "owner_id": "843302972746",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06bddc9ae4ad1c7bc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CreatedBy": "Terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "VPC",
              "Name": "dev-public-rt",
              "Project": "Task6-ModulesAndPacker",
              "Task": "Task6"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "VPC",
              "Name": "dev-public-rt",
              "Project": "Task6-ModulesAndPacker",
              "Task": "Task6"
            },
            "timeouts": null,
            "vpc_id": "vpc-0136ab482244d7d75"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d93152a7301114f",
            "route_table_id": "rtb-0ce181536689caa2d",
            "subnet_id": "subnet-0237ee426754f76f2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0995adc01e01d9af2",
            "route_table_id": "rtb-0ce181536689caa2d",
            "subnet_id": "subnet-08835cde2bbd1cca2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e787dce45a5a67d",
            "route_table_id": "rtb-017005cf353177522",
            "subnet_id": "subnet-011d209a2eb7b8ff0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dff20b43ccbff340",
            "route_table_id": "rtb-017005cf353177522",
            "subnet_id": "subnet-096ce391e316d833d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843302972746:subnet/subnet-0237ee426754f76f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0237ee426754f76f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "843302972746",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "Terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "VPC",
              "Name": "dev-private-subnet-1",
              "Project": "Task6-ModulesAndPacker",
              "Task": "Task6",
              "Type": "Private"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "VPC",
              "Name": "dev-private-subnet-1",
              "Project": "Task6-ModulesAndPacker",
              "Task": "Task6",
              "Type": "Private"
            },
            "vpc_id": "vpc-0136ab482244d7d75"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843302972746:subnet/subnet-08835cde2bbd1cca2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08835cde2bbd1cca2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "843302972746",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "Terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "VPC",
              "Name": "dev-private-subnet-2",
              "Project": "Task6-ModulesAndPacker",
              "Task": "Task6",
              "Type": "Private"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "VPC",
              "Name": "dev-private-subnet-2",
              "Project": "Task6-ModulesAndPacker",
              "Task": "Task6",
              "Type": "Private"
            },
            "vpc_id": "vpc-0136ab482244d7d75"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843302972746:subnet/subnet-011d209a2eb7b8ff0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011d209a2eb7b8ff0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "843302972746",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "Terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "VPC",
              "Name": "dev-public-subnet-1",
              "Project": "Task6-ModulesAndPacker",
              "Task": "Task6",
              "Type": "Public"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "VPC",
              "Name": "dev-public-subnet-1",
              "Project": "Task6-ModulesAndPacker",
              "Task": "Task6",
              "Type": "Public"
            },
            "vpc_id": "vpc-0136ab482244d7d75"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843302972746:subnet/subnet-096ce391e316d833d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096ce391e316d833d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "843302972746",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "Terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "VPC",
              "Name": "dev-public-subnet-2",
              "Project": "Task6-ModulesAndPacker",
              "Task": "Task6",
              "Type": "Public"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "VPC",
              "Name": "dev-public-subnet-2",
              "Project": "Task6-ModulesAndPacker",
              "Task": "Task6",
              "Type": "Public"
            },
            "vpc_id": "vpc-0136ab482244d7d75"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843302972746:vpc/vpc-0136ab482244d7d75",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01df555c04a7a0b0a",
            "default_route_table_id": "rtb-0284aad8bfa29c7e0",
            "default_security_group_id": "sg-041c9eaae7fa2af72",
            "dhcp_options_id": "dopt-07ef55a5dca0caf1b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0136ab482244d7d75",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0284aad8bfa29c7e0",
            "owner_id": "843302972746",
            "tags": {
              "CreatedBy": "Terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "VPC",
              "Name": "dev-vpc",
              "Project": "Task6-ModulesAndPacker",
              "Task": "Task6"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Module": "VPC",
              "Name": "dev-vpc",
              "Project": "Task6-ModulesAndPacker",
              "Task": "Task6"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}